# axial-rs

./: .gitignore  Cargo.toml  LICENCE  README.md  README_ru.md
axial_macros/: Cargo.toml
axial_macros/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
src/core/: mod.rs
src/core/clients/: http.rs
src/core/config/: configer.rs  mod.rs
src/core/routes/: router.rs
src/core/servers/: http.rs  http_config.rs  mod.rs
src/crypto/: mod.rs
