[package]
name = "axial"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "./example",
    "./axial_macros",
]

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["tokio", "server-auto"] }
percent-encoding = "2.3.1"
reqwest = { version = "0.12.15", features = ["json"], optional = true }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }

[features]
default = ["server"]

server = []
client = [
    "dep:reqwest"
]
