[package]
name = "axial_macros"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/bjfssd757/axial-rs"
description = "Axial-macros - crate for proc-macro for Axial"
license = "MIT"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
axial = "0.2.0"

[lib]
proc-macro = true
